
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ total_bytes; } ;
struct udp_msg {TYPE_1__ raw; } ;
struct TYPE_4__ {int window_size; } ;


 TYPE_2__* __S ;
 int udp_msg_free (struct udp_msg*) ;

void udp_msg_confirm_free (struct udp_msg *msg) {
  __S->window_size -= msg->raw.total_bytes;
  udp_msg_free (msg);
}
