; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp-targets.c_udp_msg_confirm_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-udp-targets.c_udp_msg_confirm_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.udp_msg = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@__S = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @udp_msg_confirm_free(%struct.udp_msg* %0) #0 {
  %2 = alloca %struct.udp_msg*, align 8
  store %struct.udp_msg* %0, %struct.udp_msg** %2, align 8
  %3 = load %struct.udp_msg*, %struct.udp_msg** %2, align 8
  %4 = getelementptr inbounds %struct.udp_msg, %struct.udp_msg* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @__S, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = sext i32 %9 to i64
  %11 = sub nsw i64 %10, %6
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %8, align 4
  %13 = load %struct.udp_msg*, %struct.udp_msg** %2, align 8
  %14 = call i32 @udp_msg_free(%struct.udp_msg* %13)
  ret void
}

declare dso_local i32 @udp_msg_free(%struct.udp_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
